--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <body class="h-[100vh]">
     <div id="app" class="flex h-[100vh] justify-around items-center">
     </div>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
