--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <title>Chess</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body class="h-[100vh]">
-    <div id="app" class="flex h-[100vh] justify-around items-center">
+  <body>
+    <div id="app">
     </div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
